--- a/index.html
+++ b/index.html
@@ -5,84 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body {
-            align-items: center;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            font-family: verdana;
-        }
-
-        .buttons {
-            display: flex;
-            flex-direction: row;
-        }
-
-        .klokke {
-
-            align-items: center;
-            display: flex;
-            flex-direction: column;
-            width: 350px;
-            height: 350px;
-            background-color: coral;
-            border: 2px solid black;
-            border-radius: 10px;
-        }
-
-        h1 {
-            color: black;
-            text-align: center;
-        }
-
-        .btn {
-            margin-top: 60px;
-            width: 100px;
-            height: 40px;
-            border: 3px solid white;
-            cursor: pointer;
-            color: white;
-            font-size: x-large;
-            border-radius: 50px;
-        }
-
-        .btn:hover {
-            transform: scale(1.080);
-
-        }
-
-        #start {
-            background-color: #009779;
-        }
-
-        #stop {
-            background-color: #c91400;
-        }
-
-        #pause {
-            background-color: darkgray;
-        }
-
-        .display {
-            height: 30px;
-            width: 100px;
-            border: 1px solid black;
-            margin-top: 10px;
-            background-color: white;
-            text-align: center;
-            font-size: larger;
-        }
-
-        .roundsList {
-            background-color: white;
-            height: 100px;
-            width: 150px;
-            border: 1px solid black;
-            margin-top: 10px;
-            font-size: medium;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -97,28 +20,8 @@
         <div id="app" class="display"></div><br><br>
         Rundetider:<div id="lapTime" class="roundsList"></div>
     </div>
-    <script>
-        const app = document.getElementById('app');
-        const roundTime = document.getElementById('lapTime');
-        let seconds = 0;
-        var myInterval;
 
-        function startTimer() {
-            myInterval = setInterval(countSeconds, 1000);
-        }
-        function countSeconds() {
-            app.innerHTML = seconds;
-            seconds++;
-        }
-        function lapTimer() {
-            roundTime.innerHTML += `<li>${seconds - 1} sekunder</li>`;
-            seconds = 0;
-        }
-        function stopTimer() {
-            clearInterval(myInterval);
-
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 
 </html>
