--- a/index.html
+++ b/index.html
@@ -9,17 +9,8 @@
 </head>
 
 <body>
-    <h1>Stoppeklokke</h1>
 
-    <div class="klokke">
-        <div class="buttons">
-            <button class="btn" id="start" onclick="startTimer()">Start</button>
-            <button class="btn" id="stop" onclick="lapTimer()">Lap</button>
-            <button class="btn" id="pause" onclick="stopTimer()">Pause</button><br>
-        </div>
-        <div id="app" class="display"></div><br><br>
-        Rundetider:<div id="lapTime" class="roundsList"></div>
-    </div>
+    <div id="app"></div>
 
     <script src="script.js"></script>
 </body>
